PCS BAckup 26Dec2023/Backup-Source/objects/Internal_Use__c.object
<CustomObject>
    <fields>
        <fullName>Total_Rows__c</fullName>
        <label>Total Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>limit__c</fullName>
        <label>limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>offset__c</fullName>
        <label>offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Internal Use</label>
    <nameField>
        <label>Internal Use Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>